[project]
name = "twinlink"
version = "0.0.1"
authors = [
  { name="Hannes Philip Voss", email="mail@hannesvoss.de" },
]
description = "This package provides a simple and secure bidirectional digital twin framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/hannesvoss/twinlink"
Issues = "https://github.com/hannesvoss/twinlink/issues"